# aquagaurd

./: .gitignore  LICENSE  README.md  TODO.md  error_log.txt  package.json  pnpm-lock.yaml  pyproject.toml  temp.inp  temp.rpt  test_l_town.py  test_plot.py  test_snap.py
app/: main.py  schemas.py
app/core/: __init__.py  data_generator.py  detect_leaks.py  models.py  zone_inference.py  zone_model.py
app/routers/: dispatch.py  network.py  pipeline.py  report.py  sandbox.py  savings.py  sensors.py
app/services/: data_service.py  network_service.py  pipeline_service.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/services/: network_parser.py
data/: L-TOWN.fault_matrix.pkl  distancesGraph.csv  edge_index.csv
data/models/: universal_zone_model.pt
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: FileUploader.jsx  Layout.jsx  LeakBadge.jsx  MetricCard.jsx  NetworkMap.jsx  NetworkStats.jsx  SectionHeader.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CitySandbox.jsx  Dashboard.jsx  DetectionResults.jsx  Login.jsx  NetworkOverview.jsx  SandboxProcedural.jsx  SandboxUniversal.jsx  Savings.jsx  SensorExplorer.jsx  Simulation.jsx
model/: pyproject.toml
model/src/: data_pipeline.py  graph_builder.py
scripts/: train_universal.py
