[project]
name = "aquaguard"
version = "0.1.0"
description = "AquaGuard – Smart Water Leak Detection System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "wntr>=1.1.0",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "einops>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
